samples/_failures_safe/1761547857_609adc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ae87377a.c: In function ‘main’:
./samples/SAFE/__tmp_ae87377a.c:164:5: error: expected declaration or statement at end of input
  164 |     }
      |     ^
